Crash on normal map bake when 3D Viewport is sculpt mode. #65877

Closed
opened 2019-06-17 07:59:53 +02:00 by Jun Mizutani · 3 comments
Contributor

System Information
Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris Pro OpenGL Engine Intel Inc. 4.1 INTEL-12.9.22

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-17 02:52, hash: a1ef2e4b16
Worked: (optional)

AND

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 422.02

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-16 23:08, hash: 12da679fa0

Short description of error
Crash on Bake when 3D Viewport is sculpt mode.

Exact steps for others to reproduce the error

With default cube,
Create a texture,
Apply Multiresolution modifier,
Add Image Texture node,
Bake normal with sculpt mode,
Crash
crash_on_bake.blend

**System Information** Operating system: Darwin-18.6.0-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris Pro OpenGL Engine Intel Inc. 4.1 INTEL-12.9.22 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-17 02:52, hash: `a1ef2e4b16` Worked: (optional) AND **System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 422.02 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-16 23:08, hash: `12da679fa0` **Short description of error** Crash on Bake when 3D Viewport is sculpt mode. **Exact steps for others to reproduce the error** With default cube, Create a texture, Apply Multiresolution modifier, Add Image Texture node, Bake normal with sculpt mode, Crash [crash_on_bake.blend](https://archive.blender.org/developer/F7106451/crash_on_bake.blend)
Author
Contributor

Added subscriber: @jmztn

Added subscriber: @jmztn

This issue was referenced by 7d83e7a9df

This issue was referenced by 7d83e7a9dffe8bb24217d749c33cdb24f3b7dc49

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-06-20 14:39:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65877
No description provided.